# jetbrains-proxy-mcp-server

./: .gitignore  README.md  pyproject.toml  pytools.sh
docker/0.1.0/: .env  Dockerfile  build.sh  config-mac.yaml  config-windows-git-bash.yaml  config-windows-stdio.yaml  config-windows.yaml  config.yaml  docker-compose.yml  run-in-docker-windows-git-bash.bat  run-in-docker-windows.bat  run-in-docker.bat  run-in-docker.sh
src/jetbrains_proxy_mcp_server/: __init__.py  __main__.py  paths.py  server.py  utils.py
src/jetbrains_proxy_mcp_server/properties/: JetbrainsMCPServer.py  MCPServerProperties.py  __init__.py
src/jetbrains_proxy_mcp_server/schema/: __init__.py  exceptions.py
src/jetbrains_proxy_mcp_server/service/: JetbrainsMCPServerProxy.py  __init__.py
tests/: test_convert_path.py  test_paths.py  test_utils.py  test_utils_execute.py  test_utils_get.py
