# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# Declaring the build backend
[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/jetbrains_proxy_mcp_server/_version.py"

[project]
dynamic = ["version"]

# Basic information
name = "jetbrains-proxy-mcp-server"
#version = "0.1.0"

# Dependencies and requirements
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.4.0",
    "pydantic>=2.0",
    "typing>=3.7.4.3",
    "pyyaml>=6.0.2",
    "anyio>=4.3.0",
]

# About project
#authors = [
#    { name = "Your Name", email = "your-email@example.example" }
#]
#maintainers = [
#    { name = "Your Name", email = "your-email@example.example" }
#]
description = "A JetBrains proxy MCP server."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "mcp-server", "jetbrains"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

# Optional dependencies
[project.optional-dependencies]
test = ["pytest>=8.4"]

# Creating executable scripts
[project.scripts]
jetbrains-proxy-mcp-server = "jetbrains_proxy_mcp_server:main"

# A list of URLs associated with your project, displayed on the left sidebar of your PyPI project page.
# Note that if the label contains spaces, it needs to be quoted, e.g., Website = "https://example.com" but "Official Website" = "https://example.com"
#[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/example.git"
#Issues = "https://github.com/me/example/issues"
#Changelog = "https://github.com/me/example/blob/main/CHANGELOG.md"
